# gliner-as-a-service

./: .dockerignore  .gitignore  Dockerfile.gliner  Dockerfile.torch-cpu  README.md  compose.yml  locustfile.py  pyproject.toml
.streamlit/: config.toml
app/: main.py
app/src/: __init__.py  celery_worker.py  gliner.py  models.py  redis.py  router.py  tasks.py  ui.py
dependencies/: requirements-clean.txt  requirements-dev.txt  requirements-in.txt  requirements-out.txt  requirements-ui.txt
scripts/: open_browsers.py  setup-python-env.sh  start-fastapi.sh  start-ui.sh  test-predict.sh
