[tool.poetry]
name = "gliner-as-a-service"
version = "1.0.0"
description = ""
authors = ["henrikalbihn <61203850+henrikalbihn@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "0.30.1"
aiohttp = "3.9.5"
aioredis = "2.0.1"
aiosignal = "1.3.1"
amqp = "5.2.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
billiard = "4.2.0"
blinker = "1.8.2"
boto3 = "1.34.105"
botocore = "1.34.105"
bpemb = "0.3.5"
brotli = "1.1.0"
celery = "5.4.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
configargparse = "1.7"
conllu = "4.5.3"
contourpy = "1.2.1"
cycler = "0.12.1"
datasets = "2.19.1"
deprecated = "1.2.14"
dill = "0.3.8"
dnspython = "2.6.1"
email-validator = "2.1.1"
fastapi = "0.111.0"
fastapi-cache2 = "0.1.8"
fastapi-cli = "0.0.3"
filelock = "3.14.0"
flair = "0.13.1"
flask = "3.0.3"
flask-cors = "4.0.1"
flask-login = "0.6.3"
flower = "2.0.1"
flupy = "1.2.0"
fonttools = "4.51.0"
frozenlist = "1.4.1"
fsspec = "2024.3.1"
ftfy = "6.2.0"
gdown = "5.2.0"
gensim = "4.3.2"
gevent = "24.2.1"
geventhttpclient = "2.2.1"
gliner = "0.1.13"
gputil = "1.4.0"
greenlet = "3.0.3"
gunicorn = "22.0.0"
h11 = "0.14.0"
hf-transfer = "0.1.6"
hiredis = "2.3.2"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
huggingface-hub = "0.23.0"
humanize = "4.9.0"
idna = "3.7"
itsdangerous = "2.2.0"
janome = "0.5.0"
jinja2 = "3.1.4"
jmespath = "1.0.1"
joblib = "1.4.2"
kiwisolver = "1.4.5"
kombu = "5.3.7"
langdetect = "1.0.9"
locust = "2.27.0"
loguru = "0.7.2"
lxml = "5.2.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.8.4"
mdurl = "0.1.2"
more-itertools = "10.2.0"
mpld3 = "0.5.10"
mpmath = "1.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
multiprocess = "0.70.16"
networkx = "3.3"
numpy = "1.26.4"
orjson = "3.10.3"
packaging = "24.0"
pandas = "2.2.2"
pendulum = "3.0.0"
pillow = "10.3.0"
pptree = "3.1"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.43"
protobuf = "5.26.1"
psutil = "5.9.8"
pyarrow = "16.1.0"
pyarrow-hotfix = "0.6"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pygments = "2.18.0"
pyparsing = "3.1.2"
pysocks = "1.7.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytorch-revgrad = "0.2.0"
pytz = "2024.1"
pyyaml = "6.0.1"
pyzmq = "26.0.3"
redis = "5.0.4"
regex = "2024.5.10"
requests = "2.32.2"
rich = "13.7.1"
s3transfer = "0.10.1"
safetensors = "0.4.3"
scikit-learn = "1.4.2"
scipy = "1.12.0"
segtok = "1.5.11"
semver = "3.0.2"
sentencepiece = "0.2.0"
seqeval = "1.2.2"
setuptools = "69.5.1"
shellingham = "1.5.4"
six = "1.16.0"
smart-open = "7.0.4"
sniffio = "1.3.1"
soupsieve = "2.5"
sqlitedict = "2.1.0"
starlette = "0.37.2"
sympy = "1.12"
tabulate = "0.9.0"
threadpoolctl = "3.5.0"
time-machine = "2.14.1"
tokenizers = "0.19.1"
torch = "2.3.0"
tornado = "6.4"
tqdm = "4.66.4"
transformer-smaller-training-vocab = "0.4.0"
transformers = "4.40.2"
typer = "0.12.3"
typing-extensions = "4.11.0"
tzdata = "2024.1"
ujson = "5.10.0"
urllib3 = "1.26.18"
uvicorn = "0.29.0"
uvloop = "0.19.0"
vine = "5.1.0"
watchfiles = "0.21.0"
wcwidth = "0.2.13"
websockets = "12.0"
werkzeug = "3.0.3"
wikipedia-api = "0.6.0"
wrapt = "1.16.0"
xxhash = "3.4.1"
yarl = "1.9.4"
zope-event = "5.0"
zope-interface = "6.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"

[tool.poetry.scripts]
gliner = 'app.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
